# course_work_3

./: README.md  func.py  main.py  pyproject.toml  transaction.py
src/: func.py  main.py  transaction.py
tests/: test_func.py  test_transaction.py
