[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Artemij Rilev <artik200050@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
datetime = "^5.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
